# iris-veloquarantine-module

./: Makefile  README.md  setup.cfg  setup.py
iris_veloquarantine_module/: IrisVeloquarantineConfig.py  IrisVeloquarantineInterface.py  __init__.py
iris_veloquarantine_module/veloquarantine_handler/: veloquarantine_handler.py
